3er commit - estilo a quienes somos

--- a/quienes somos.html
+++ b/quienes somos.html
@@ -48,19 +48,20 @@
     <!-- titulo -->
     <p class="lead">STAFF</p>
     <!-- texto principal -->
-    <p class="text-center">Experiencia y responsabilidad, personal calificado para la seguridad de sus pertenencias, unidades totalmente en regla para transportar a toda Argentina</p>
+    <p class="text-center">Experiencia y responsabilidad, personal calificado para la seguridad de sus pertenencias, unidades totalmente en regla para transportar a toda Argentina. Cuando Don José Ignacio Díaz fundó Díaz Fletes en 1969, no sabía que pronto revolucionaría el mundo de la logística. Hoy en día, Díaz Fletes es la empresa de logística líder en Argentina. Contamos con más de 30 empleados, quienes trabajan sin descanso todos los días para ayudarlo a cruzar fronteras, participar en nuevos mercados y hacer crecer su negocio. O simplemente para enviarle una carta a sus seres queridos.
+    </p>
   </div>
   <!-- cards -->
   <!-- persona 1 -->
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="https://images.unsplash.com/photo-1573497019418-b400bb3ab074?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-fluid rounded-start" alt="...">
+        <img src="./img/marina.jpg" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">Marina Díaz</h5>
-          <p class="card-text">Fundadora - Responsable Administración y finanzas</p>
+          <p class="card-text">Ceo - Responsable Administración y finanzas</p>
           <p class="card-text"><small class="text-muted">"Te subimos hasta el piano por la escalera"</small></p>
         </div>
       </div>
@@ -70,7 +71,7 @@
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="https://images.unsplash.com/photo-1515019512855-1464f21e9eb8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-fluid rounded-start" alt="...">
+        <img src="./img/maria angeles.jpg" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -85,7 +86,7 @@
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="https://images.unsplash.com/photo-1551913363-3ee43854c682?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" class="img-fluid rounded-start" alt="...">
+        <img src="./img/carlos.jpg" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
@@ -96,11 +97,11 @@
       </div>
     </div>
   </div>
-  persona 4
+  <!-- persona 4 -->
   <div class="card mb-3" style="max-width: 540px;">
     <div class="row g-0">
       <div class="col-md-4">
-        <img src="https://images.unsplash.com/photo-1551825687-f9de1603ed8b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" class="img-fluid rounded-start" alt="...">
+        <img src="./img/benjamin.jpg" class="img-fluid rounded-start" alt="...">
       </div>
       <div class="col-md-8">
         <div class="card-body">
