galería (estructura) terminada

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- IMAGEN PRINCIPAL HOME -->
 
   <div class="container">
-    <img src="./img/robson 4921x3281.jpg" class="img-fluid" alt="camion ruta cielo celeste">
+    <img src="./img/robson 4921x3281.jpg" class="img-fluid" alt="camion ruta byn">
   </div>  
 
     <!-- formulario en el home -->
