--- a/quienes somos.html
+++ b/quienes somos.html
@@ -50,7 +50,7 @@
     <!-- titulo -->
     <p class="lead">STAFF</p>
     <!-- texto principal -->
-    <p class="text-center">Experiencia y responsabilidad, personal calificado para la seguridad de sus pertenencias, unidades totalmente en regla para transportar a toda Argentina. Cuando Don José Ignacio Díaz fundó Díaz Fletes en 1969, no sabía que pronto revolucionaría el mundo de la logística. Hoy en día, Díaz Fletes es la empresa de logística líder en Argentina. Contamos con más de 30 empleados, quienes trabajan sin descanso todos los días para ayudarlo a cruzar fronteras, participar en nuevos mercados y hacer crecer su negocio. O simplemente para enviarle una carta a sus seres queridos.
+    <p class="text-start">Experiencia y responsabilidad, personal calificado para la seguridad de sus pertenencias, unidades totalmente en regla para transportar a toda Argentina. Cuando José Ignacio Díaz fundó Díaz Fletes en 1969, no sabía que pronto revolucionaría el mundo de la logística. Hoy, Díaz Fletes es la empresa de logística líder en Argentina. Contamos con más de 30 empleados, quienes trabajan todos los días para ayudarlo a cruzar fronteras, participar en nuevos mercados y hacer crecer su negocio. O simplemente para enviarle una carta a sus seres queridos.
     </p>
   </div>
   <!-- cards -->
