estructura seccion servicios, estilo basico y media query

--- a/servicios.html
+++ b/servicios.html
@@ -44,6 +44,42 @@
     </div>
   </nav>
 
+  <div class="container-fluid">
+    <!-- titulo -->
+    <p class="lead">Servicios</p>
+</div>
+
+<!-- cards de servicios -->
+<section class="servicios">
+    <div class="card" style="width: 18rem;">
+        <img src="./img/ecommerce.jpg" class="card-img-top" alt="foto de laptop">
+        <div class="card-body">
+        <h5 class="card-title">E-commerce</h5>
+        <p class="card-text">Proveemos soporte logístico para tu actividad de comercio electrónico .</p>
+        <a href="#" class="btn btn-primary">Ver Mas</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="./img/gps.jpg" class="card-img-top" alt="foto gps">
+        <div class="card-body">
+        <h5 class="card-title">Seguimiento satelital</h5>
+        <p class="card-text">Conocé en todo momento el recorrido de tu carga o envío</p>
+        <a href="#" class="btn btn-primary">Ver Mas</a>
+        </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+        <img src="./img/caudales.jpg" class="card-img-top" alt="foto billetes">
+        <div class="card-body">
+        <h5 class="card-title">Envíos especiales</h5>
+        <p class="card-text">Te brindamos total seguridad en el traslado de valores, obras de arte, medicamentos especiales, insumos médicos, etc.</p>
+        <a href="#" class="btn btn-primary">Ver Mas</a>
+        </div>
+    </div>
+</section>
+
+<!-- imagen responsive -->
+
+<img src="./img/2.jpg" class="img-fluid" alt="foto de equipo">
 
 
 
